New: Support redirection after login

--- a/diamm/templates/website/auth/login.jinja2
+++ b/diamm/templates/website/auth/login.jinja2
@@ -8,6 +8,7 @@
                 <form action="{{ url('login') }}" method="post">
                     {% csrf_token %}
                     {{ form }}
+                    <input type="hidden" name="next" value="{{ next }}" />
                     <button type="submit">Log in</button>
                 </form>
 
