New: Changed address to user account

--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -18,7 +18,7 @@
             <li class="navbar-item navbar-highlight"><a href="#">Donate</a></li>
 
             {% if user.is_authenticated() %}
-                <li class="navbar-item"><a href="{{ url('user-profile', pk=user.pk) }}">Your account</a>
+                <li class="navbar-item"><a href="{{ url('user-account') }}">Your account</a>
                     <ul class="dropdown-content">
                         {# <li><a href="{{ url('account-update') }}">Update Account</a></li>#}
                         <li>
