--- a/diamm/templates/website/stats/stats.jinja2
+++ b/diamm/templates/website/stats/stats.jinja2
@@ -2,9 +2,10 @@
 
 {% block body %}
 <div class="row">
-    {% for key, value in content.items() %} 
+    {% for key, value in content.items() %}
         <div class="three columns" style="text-align:center">
-            <h2>{{ key|title|replace("_", " ") }} </h2> {{ value|intcomma }}
+            <h2>{{ key | title | replace("_", " ") }} </h2>
+            <p>{{ value | intcomma }}</p>
         </div>
     {% endfor %}
 </div>
