--- a/diamm/templates/website/city/city_detail.jinja2
+++ b/diamm/templates/website/city/city_detail.jinja2
@@ -3,21 +3,25 @@
 {% block body %}
     <div class="col-md-12">
         <h1>{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h1>
-        {% if content.archives %}<h2>Archives</h2>{% endif %}
-        <ul>
-        {% for archive in content.archives %}
-            <li>
-                <a href="{{ archive.url }}">{{ archive.name }}</a>
-            </li>
-        {% endfor %}
-        </ul>
-        {% if content.sources %}<h2>Sources</h2>{% endif %}
-        <ul>
-        {% for source in content.sources %}
-            <li>
-                <a href="{{ source.url }}">{{ source.name }}</a>
-            </li>
-        {% endfor %}
-        </ul>
+        {% if content.archives %}
+            <h2>Archives</h2>
+            <ul>
+            {% for archive in content.archives %}
+                <li>
+                    <a href="{{ archive.url }}">{{ archive.name }}</a>
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {% if content.sources %}
+            <h2>Sources</h2>
+            <ul>
+            {% for source in content.sources %}
+                <li>
+                    <a href="{{ source.url }}">{{ source.name }}</a>
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
     </div>
 {% endblock %}
