--- a/diamm/templates/website/auth/reset.jinja2
+++ b/diamm/templates/website/auth/reset.jinja2
@@ -6,6 +6,7 @@
             <div class="login-block">
                 <h2>Reset password</h2>
                 <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+                <p>NB: Accounts on the beta website are independent from diamm.ac.uk, and resetting your password on this site will not affect your account details on the old site.</p>
                 <form method="post">{% csrf_token %}
                     {{ form }}
                     <button type="submit">Reset</button>
