--- a/diamm/templates/website/city/city_list.jinja2
+++ b/diamm/templates/website/city/city_list.jinja2
@@ -1,13 +1,15 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
-        <h1>City List</h1>
-        <ul>
-        {% for city in content.results %}
-        <li><a href="{{ city.url }}">{{ city.name }}</a></li>
-        {% endfor %}
-        </ul>
-        {% include "website/blocks/browse_paginator.jinja2" %}
+    <div class="row">
+        <div class="twelve columns">
+            <h1>City List</h1>
+            <ul>
+                {% for city in content.results %}
+                    <li><a href="{{ city.url }}">{{ city.name }}</a></li>
+                {% endfor %}
+            </ul>
+            {% include "website/blocks/browse_paginator.jinja2" %}
+        </div>
     </div>
 {% endblock %}
