Fixed: Alphabet browse interface
This commit improves the alphabet browsing interface. Removes heading tag from each letter (bad semantic markup); uses a list for the alphabet with appropriate styling; adds an 'All' option to clear a current browse list.

--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -3106,6 +3106,15 @@ ul.contribution-list li {
 .search-results .search-result h4 {
   margin-bottom: 0.1rem; }
 
+.browse-alphabet ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0.6rem; }
+  .browse-alphabet ul li {
+    padding: 0 0.3rem;
+    margin: 0; }
+
 .login-block {
   width: 100%; }
   .login-block h2 {
