--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -12,6 +12,7 @@
 @import "contribution";
 @import "source";
 @import "search";
+@import "browse";
 @import "login";
 @import "beta";
 @import "debug";
