--- a/diamm/templates/website/country/country_list.jinja2
+++ b/diamm/templates/website/country/country_list.jinja2
@@ -2,8 +2,9 @@
 
 {% block body %}
     <div class="row">
-        <div class="twelve columns">
+        <div class="sixteen columns">
             <h1>Country List</h1>
+            {% include "website/blocks/browse_alphabet.jinja2" %}
             <ul>
                 {% for country in content.results %}
                     <li><a href="{{ country.url }}">{{ country.name }}</a></li>
