--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -76,34 +76,36 @@
       }
     }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      list-style-type: none;
-      background-color: $diamm-white;
-      float: left;
-      margin-top: 0;
-      margin-left: 0;
-      width: 6.2rem;
-      height: 2rem;
-      padding: 0;
+    ul.dropdown-content {
+        display: none;
+        position: absolute;
+        list-style-type: none;
+        margin: 0;
+        border-style: solid;
+        border-width: thin;
+        border-bottom-style: none;
+        border-bottom-width: none;
     }
 
-    .dropdown-content div {
-      position: relative;
-      -webkit-column-count: 2;
-      -moz-column-count: 2;
-      column-count: 2;
+    ul.dropdown-content a, input {
+        font-size: 1rem;
+        font-weight: normal;
+        background-color: $diamm-white;
+        &:hover, &:focus {
+            background: $diamm-red;
+        };
+        text-transform: None;
     }
 
-    .dropdown-content a {
-      display: block;
-      margin-top: 0;
-      margin-left: 0.2rem;
-      padding-left: 0;
-      font-size: 0.7rem;
-      padding-bottom: 0.5rem;
+    ul.dropdown-content li {
+        height: 2rem;
+        float: none;
+        background-color: $diamm-white;
+        overflow: hidden;
+        border-bottom-style: solid;
+        border-bottom-width: thin;
     }
+
 
     .sub-pages {
       list-style-type: square;
