--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2819,29 +2819,29 @@ form {
         border-bottom: none;
         background: #dd1c1a;
         color: #fdfffc; }
-    .navbar .navbar-list .dropdown-content {
+    .navbar .navbar-list ul.dropdown-content {
       display: none;
       position: absolute;
       list-style-type: none;
+      margin: 0;
+      border-style: solid;
+      border-width: thin;
+      border-bottom-style: none;
+      border-bottom-width: none; }
+    .navbar .navbar-list ul.dropdown-content a, .navbar .navbar-list input {
+      font-size: 1rem;
+      font-weight: normal;
       background-color: #fdfffc;
-      float: left;
-      margin-top: 0;
-      margin-left: 0;
-      width: 6.2rem;
+      text-transform: None; }
+      .navbar .navbar-list ul.dropdown-content a:hover, .navbar .navbar-list ul.dropdown-content a:focus, .navbar .navbar-list input:hover, .navbar .navbar-list input:focus {
+        background: #dd1c1a; }
+    .navbar .navbar-list ul.dropdown-content li {
       height: 2rem;
-      padding: 0; }
-    .navbar .navbar-list .dropdown-content div {
-      position: relative;
-      -webkit-column-count: 2;
-      -moz-column-count: 2;
-      column-count: 2; }
-    .navbar .navbar-list .dropdown-content a {
-      display: block;
-      margin-top: 0;
-      margin-left: 0.2rem;
-      padding-left: 0;
-      font-size: 0.7rem;
-      padding-bottom: 0.5rem; }
+      float: none;
+      background-color: #fdfffc;
+      overflow: hidden;
+      border-bottom-style: solid;
+      border-bottom-width: thin; }
     .navbar .navbar-list .sub-pages {
       list-style-type: square;
       margin-right: 0; }
