New: menu that changes browsing type filter

--- a/diamm/static/stylesheets/_browse.scss
+++ b/diamm/static/stylesheets/_browse.scss
@@ -10,3 +10,19 @@
     }
   }
 }
+
+.active {
+    color: #1395db;
+    font-weight: bold;
+}
+
+ul.filter {
+    list-style-type: none;
+}
+
+.type-filter {
+    cursor: pointer;
+    &:hover {
+        color: #1395db;
+    }
+}
