--- a/diamm/templates/single_page_app.jinja2
+++ b/diamm/templates/single_page_app.jinja2
@@ -9,7 +9,8 @@
     {% include "website/blocks/beta_notice.jinja2" %}
     {% include "website/blocks/header.jinja2" %}
 
-    <div id="content-root"></div>
+    <div class="full-width"></div>
+    <div id="content-root" class="container"></div>
 
     <footer class="footer" style="text-align: center;">
         <img src="{{ static('images/oxford.png') }}">
