Reworking faceted search
Moving away from facet pivots because the search page doesn't make use
of the hierarchy. Switched instead to normal facet.fields.

Wrapping the search terms in quotes (") because geo terms that included
spaces weren't being matched properly.

Summed and consolidated values whose keys appeared in multiple facets

Adds links to filter by geographic facets to the search template

--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -29,7 +29,7 @@
     {% endif %}
 
     <div class="row">
-        <div class="sixteen columns search-results">
+        <div class="thirteen columns search-results">
         {% if content.results %}
             <p class="result-count">Returned {{ content.count }} results.</p>
             {% for result in content.results %}
@@ -44,6 +44,13 @@
                 <p>Type your search above.</p>
             {% endif %}
         {% endif %}
+        </div>
+        <div class="three columns">
+            {% if content.geo %}
+            {% with geo=content.geo %}
+                {% include "website/search/results/geo.jinja2" %}
+            {% endwith %}
+            {% endif %}
         </div>
     </div>
 
