--- a/diamm/templates/website/search/results/geo_links.jinja2
+++ b/diamm/templates/website/search/results/geo_links.jinja2
@@ -1,4 +1,4 @@
-<a href="{{ url('search') }}?{%- if params.q -%}q={{ params.q }}{%- endif -%}{%- if type and name -%}&{{ type }}={{ name }}{%- endif -%}"
+<a href="{{url}}"
     class="filter-geo"
     data-facet-name="{{ type }}"
     data-facet-value="{{ name }}">
