--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -79,45 +79,47 @@
     {% if content.dates %}
         var dates = {{ content.dates.results|safe }};
         var url = "{{ content.dates['@url']|safe }}";
-    {% endif %}
 
-    var count_dates = function(start_date, end_date) {
-        var count = 0;
-        for (var i = 0, length = dates.length; i < length; i++) {
-            if ((start_date < dates[i].end_date) && (end_date > dates[i].start_date))
-                count += dates[i].count;
+        // counts the number of items in the range given
+        var count_dates = function(start_date, end_date) {
+            var count = 0;
+            for (var i = 0, length = dates.length; i < length; i++) {
+                if ((start_date < dates[i].end_date) && (end_date > dates[i].start_date))
+                    count += dates[i].count;
+            };
+            return count;
         };
-        return count;
-    };
 
-    var century_filter = document.getElementById('century_filter');
-    var range = document.getElementById('slider');
-    if (range) {
-        noUiSlider.create(range, {
-            start: [800, 1800],
-            step: 100,
-            connect: true,
-            margin: 20,
-            orientation: 'vertical',
-            direction: 'rtl',
-            range: {
-                'min': 800,
-                'max': 1800
-            },
-            pips: {
-                mode: 'steps',
-                density: 100
-            }
-        });
+        var century_filter = document.getElementById('century_filter');
+        var range = document.getElementById('slider');
+        if (range) {
+            noUiSlider.create(range, {
+                start: [800, 1800],
+                step: 100,
+                connect: true,
+                margin: 20,
+                orientation: 'vertical',
+                direction: 'rtl',
+                range: {
+                    'min': 800,
+                    'max': 1800
+                },
+                pips: {
+                    mode: 'steps',
+                    density: 100
+                }
+            });
 
-        range.noUiSlider.on('update', function( values, handle  ) {
-            var start_date = Math.round(values[0])
-            var end_date = Math.round(values[1]);
-            var count = count_dates(start_date, end_date);
-            century_filter.innerHTML = "filter (" + count + ")";
-            century_filter.href = url + "&start_date=" + start_date + "&end_date=" + end_date;
-        });
-    };
+            // Whenever the slider is moved, update the filter count
+            range.noUiSlider.on('update', function( values, handle  ) {
+                var start_date = Math.round(values[0])
+                var end_date = Math.round(values[1]);
+                var count = count_dates(start_date, end_date);
+                century_filter.innerHTML = "filter (" + count + ")";
+                century_filter.href = url + "&start_date=" + start_date + "&end_date=" + end_date;
+            });
+        };
+    {% endif %}
 
     </script>
 {% endblock %}
