--- a/diamm/templates/website/source/source_inventory_block.jinja2
+++ b/diamm/templates/website/source/source_inventory_block.jinja2
@@ -7,7 +7,7 @@
             <dt class="source-inventory-header">
 
                 {% if item.folio_start %}
-                <a href="#" class="folio-link" data-page="{{item.folio_start}}" >{{ item.folio_start }}
+                <a href="#tab=images&folio={{ item.folio_start }}" class="folio-link">{{ item.folio_start }}
                         {% if item.folio_end %}
                             &ndash;{{ item.folio_end }}
                         {% endif %}</a>:
@@ -78,7 +78,7 @@
                     {% for item in composer.inventory %}
                         <li>
                             {%- if item.folio_start_s %}
-                                <a href="#" class="folio-link" data-page="{{ item.folio_start_s }}">{{ item.folio_start_s }}
+                            <a href="#tab=images&folio={{ item.folio_start_s }}" class="folio-link">{{ item.folio_start_s }}
                                 {%- if item.folio_end_s != item.folio_start_s -%}&ndash;{{ item.folio_end_s }}: {%- endif -%}
                                 </a>
                             {% endif -%}
