Fix: goToPage makes sure the diva instance is ready before going to the folio

--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -107,9 +107,10 @@
                         enableIIIFPageData: true,
                         enableIIIFStructure: true
                 });
+                divaObj = $("#diva-wrapper").data('diva');
             }
             //Registers functions that will be called when the fragment identifier is changed
-            Hash(Tab, Page);
+            Hash(Tab, Page(divaObj));
         };
     </script>
 {% endblock %}
