Comment out JS loading (for now)

--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -32,7 +32,7 @@
         <img src="{{ static('images/ahrc.png') }}">
     </footer>
 
-    <script src="{{ static('javascripts/dist/bundle.js') }}" type="application/javascript"></script>
+    {# <script src="{{ static('javascripts/dist/bundle.js') }}" type="application/javascript"></script> #}
     {% block scripts %}
     {% endblock %}
 
